redis-dev.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-stedi-dev-levi
spec:
  ports:
    - port: 6379
      name: redis
  clusterIP: None
  selector:
    app: redis-stedi-dev-levi
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis-stedi-dev-levi
spec:
  selector:
    matchLabels:
      app: redis-stedi-dev-levi  # has to match .spec.template.metadata.labels
  serviceName: easy-rent-dev-service-levi
  replicas: 1
  template:
    metadata:
      labels:
        app: redis-stedi-dev-levi  # has to match .spec.selector.matchLabels
    spec:
      containers:
        - name: easy-rent-dev-redis
          image: redis:7.0.5-alpine
          imagePullPolicy: Always
          args: ["--requirepass", "$(REDIS_PASS)", "--appendonly", "yes", "--save", "900", "1", "--save", "30", "2"]
          ports:
            - containerPort: 6379
              name: redis
          resources:
           limits:
            cpu: ".125"
            memory: "500Mi"
           requests:
             cpu: ".1000"
             memory: "250Mi"
          volumeMounts:
            - name: redis-dev-volume
              mountPath: /data
  volumeClaimTemplates:
  - metadata:
      name: redis-dev-volume
    spec:
      accessModes:
        - ReadWriteOnce
      resources:
        requests:
          storage: 10Gi
